k8s/moodle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  namespace: moodle-private
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
        - name: moodle
          image: "ellakcy/moodle:mysql_maria_apache_latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: moodle-data
              mountPath: /var/moodledata
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 120
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 360
            timeoutSeconds: 5
            periodSeconds: 20
            failureThreshold: 6
      volumes:
        - name: moodle-data
          emptyDir: {}
