k8s/moodle/service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle-public
  namespace: esm
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: moodle
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
