k8s/moodle/service-vpn.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle-vpn
  namespace: esm
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app: moodle
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
