k8s/moodle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle
  namespace: esm
spec:
  type: ClusterIP
  selector:
    app: moodle
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
