k8s/moodle/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle-internal
  namespace: moodle-private
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: esm-internal
    alb.ingress.kubernetes.io/group.order: "20"
    alb.ingress.kubernetes.io/healthcheck-path: /login/index.php
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /moodle
            pathType: Prefix
            backend:
              service:
                name: moodle
                port:
                  number: 80
